--- a/calendar (1).html
+++ b/calendar (1).html
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: #C31A1F;
+    color: #FD5452:
 }
 td.avui>span {
     font-weight: bold;
-    background-color: #C31A1F;
+    background-color: #FD5452;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
@@ -107,7 +107,7 @@ td.fora > span {
     opacity: 0.2;
 }
 td > span:hover {
-    background: #FA6C84;
+    background: #FFE4E8;
     color: #fff;
 }
 .boto-next, .boto-prev {
